crates/ridge-lower/tests/snapshots/lowering__actor_dispatch_with_init.snap
---
source: crates/ridge-lower/tests/lowering.rs
expression: rendered
---
module: m0
items_count: 1
items:
  - kind: actor
    name: Counter
    pub: false
    state_fields:
      - name: count
        ty: Con(0)
    init:
      caps: CapabilitySet(0)
      params:
        - name: start
          ty: Con(0)
      body:
        Assign(n0) -> StateField(count):
          Local(n1): start
    terminate: null
    handlers:
      - message: increment
        caps: CapabilitySet(0)
        ret_ty: Con(4)
        params: []
        body:
          Assign(n2) -> StateField(count):
            Call(n3):
              callee:
                Symbol(n4): Stdlib(fn:std.int.add)
              args:
                -
                  Field(n5).count:
                    Local(n6): __state
                -
                  Lit(n7): Int(1)
      - message: get_count
        caps: CapabilitySet(0)
        ret_ty: Con(0)
        params: []
        body:
          Field(n8).count:
            Local(n9): __state
