crates/ridge-lower/tests/snapshots/lowering__derive_generic_box.snap
---
source: crates/ridge-lower/tests/lowering.rs
expression: rendered
---
module: m0
items_count: 4
items:
  - kind: fn
    name: toJson
    pub: false
    main: false
    caps: CapabilitySet(0)
    ret_ty: Con(3)
    params:
      - name: $dict_Encode_66
        ty: Error
      - name: x
        ty: Error
    body:
      Call(n0):
        callee:
          Symbol(n1): Stdlib(fn:std.json.encode)
        args:
          -
            Call(n2):
              callee:
                Field(n3).encode:
                  Local(n4): $dict_Encode_66
              args:
                -
                  Local(n5): x
  - kind: fn
    name: main_box
    pub: true
    main: false
    caps: CapabilitySet(0)
    ret_ty: Con(3)
    params: []
    body:
      Call(n6):
        callee:
          Symbol(n7): Local(toJson @ m0)
        args:
          -
            Call(n8):
              callee:
                Symbol(n9): Local($inst_Encode_Box @ m0)
              args:
                -
                  Construct(n10):
                    ctor: Ctor(Record:$synth_dict_encode owner=none)
                    fields:
                      encode:
                        Lambda(n11):
                          caps: CapabilitySet(0)
                          params:
                            - name: __enc_x
                              ty: Error
                          body:
                            Call(n12):
                              callee:
                                Symbol(n13): Prelude(JInt)
                              args:
                                -
                                  Local(n14): __enc_x
          -
            Construct(n15):
              ctor: Ctor(Record:Box owner=108)
              fields:
                val:
                  Lit(n16): Int(7)
  - kind: fn
    name: $inst_Encode_Box
    pub: true
    main: false
    caps: CapabilitySet(0)
    ret_ty: Error
    params:
      - name: $dict_Encode_0
        ty: Error
    body:
      Construct(n17):
        ctor: Ctor(Record:$inst_Encode_Box owner=none)
        fields:
          encode:
            Lambda(n18):
              caps: CapabilitySet(0)
              params:
                - name: x
                  ty: Error
              body:
                Call(n19):
                  callee:
                    Symbol(n20): Prelude(JObjectFields)
                  args:
                    -
                      ListLit(n21):
                        Tuple(n22):
                          Lit(n23): Text("val")
                          Call(n24):
                            callee:
                              Field(n25).encode:
                                Local(n26): $dict_Encode_0
                            args:
                              -
                                Field(n27).val:
                                  Local(n28): x
  - kind: fn
    name: $inst_Decode_Box
    pub: true
    main: false
    caps: CapabilitySet(0)
    ret_ty: Error
    params:
      - name: $dict_Decode_0
        ty: Error
    body:
      Construct(n29):
        ctor: Ctor(Record:$inst_Decode_Box owner=none)
        fields:
          decode:
            Lambda(n30):
              caps: CapabilitySet(0)
              params:
                - name: j
                  ty: Error
              body:
                Match(n31):
                  scrutinee:
                    Match(n32):
                      scrutinee:
                        Local(n33): j
                      arms:
                        -
                          pat:
                            Ctor: Prelude(JObjectFields)
                              args:
                                Bind: __json_fields_4
                          body:
                            Call(n34):
                              callee:
                                Symbol(n35): Prelude(JObject)
                              args:
                                -
                                  Call(n36):
                                    callee:
                                      Symbol(n37): Stdlib(fn:std.map.fromList)
                                    args:
                                      -
                                        Local(n38): __json_fields_4
                        -
                          pat:
                            Bind: __json_value_5
                          body:
                            Local(n39): __json_value_5
                  arms:
                    -
                      pat:
                        Ctor: Prelude(JObject)
                          args:
                            Bind: __dec_rec_m_0
                      body:
                        Match(n40):
                          scrutinee:
                            Call(n41):
                              callee:
                                Symbol(n42): Stdlib(fn:std.map.get)
                              args:
                                -
                                  Lit(n43): Text("val")
                                -
                                  Local(n44): __dec_rec_m_0
                          arms:
                            -
                              pat:
                                Ctor: Prelude(Some)
                                  args:
                                    Bind: __dec_jv_val_2
                              body:
                                Match(n45):
                                  scrutinee:
                                    Call(n46):
                                      callee:
                                        Field(n47).decode:
                                          Local(n48): $dict_Decode_0
                                      args:
                                        -
                                          Local(n49): __dec_jv_val_2
                                  arms:
                                    -
                                      pat:
                                        Ctor: Prelude(Ok)
                                          args:
                                            Bind: __dec_f_val_1
                                      body:
                                        Construct(n0):
                                          ctor: Prelude(Ok)
                                          fields:
                                            $0:
                                              Construct(n50):
                                                ctor: Ctor(Record:Box owner=108)
                                                fields:
                                                  val:
                                                    Local(n51): __dec_f_val_1
                                    -
                                      pat:
                                        Ctor: Prelude(Err)
                                          args:
                                            Bind: __dec_err_3
                                      body:
                                        Return(n52):
                                          Construct(n53):
                                            ctor: Prelude(Err)
                                            fields:
                                              $0:
                                                Local(n54): __dec_err_3
                            -
                              pat:
                                Wild
                              body:
                                Return(n55):
                                  Construct(n56):
                                    ctor: Prelude(Err)
                                    fields:
                                      $0:
                                        Construct(n57):
                                          ctor: Ctor(Record:Error owner=12)
                                          fields:
                                            code:
                                              Lit(n58): Text("decode.missing_field")
                                            message:
                                              Lit(n59): Text("missing field \"val\"")
                    -
                      pat:
                        Wild
                      body:
                        Construct(n60):
                          ctor: Prelude(Err)
                          fields:
                            $0:
                              Construct(n61):
                                ctor: Ctor(Record:Error owner=12)
                                fields:
                                  code:
                                    Lit(n62): Text("decode.expected_object")
                                  message:
                                    Lit(n63): Text("expected a JSON object for type Box")
