crates/ridge-lower/tests/snapshots/lowering__guard_single.snap
---
source: crates/ridge-lower/tests/lowering.rs
expression: rendered
---
module: m0
items_count: 1
items:
  - kind: fn
    name: guard_single
    pub: false
    main: false
    caps: CapabilitySet(0)
    ret_ty: Con(0)
    params:
      - name: x
        ty: Con(0)
    body:
      Match(n0):
        scrutinee:
          Call(n1):
            callee:
              Symbol(n2): Stdlib(fn:std.op.gt)
            args:
              -
                Local(n3): x
              -
                Lit(n4): Int(0)
        arms:
          -
            pat:
              Lit: Bool(true)
            body:
              Call(n5):
                callee:
                  Symbol(n6): Stdlib(fn:std.int.mul)
                args:
                  -
                    Local(n7): x
                  -
                    Lit(n8): Int(2)
          -
            pat:
              Lit: Bool(false)
            body:
              Return(n9):
                Lit(n10): Int(0)
